--- a/note/definition.html
+++ b/note/definition.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,10 +69,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge2ecf3a">대충 사용하는 의미</a></li>
-<li><a href="#orgb19efa9">구세대 언어의 예</a></li>
-<li><a href="#org15a36b0">현대적인 언어의 예</a></li>
-<li><a href="#orgfe24929">결론</a></li>
+<li><a href="#org92d2891">대충 사용하는 의미</a></li>
+<li><a href="#org2b4e9a3">구세대 언어의 예</a></li>
+<li><a href="#org717cbba">현대적인 언어의 예</a></li>
+<li><a href="#org6433764">결론</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +81,9 @@
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-orge2ecf3a" class="outline-2">
-<h2 id="orge2ecf3a">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-orge2ecf3a">
+<div id="outline-container-org92d2891" class="outline-2">
+<h2 id="org92d2891">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-org92d2891">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -95,9 +99,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orgb19efa9" class="outline-2">
-<h2 id="orgb19efa9">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-orgb19efa9">
+<div id="outline-container-org2b4e9a3" class="outline-2">
+<h2 id="org2b4e9a3">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-org2b4e9a3">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -134,9 +138,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org15a36b0" class="outline-2">
-<h2 id="org15a36b0">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-org15a36b0">
+<div id="outline-container-org717cbba" class="outline-2">
+<h2 id="org717cbba">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-org717cbba">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -167,9 +171,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe24929" class="outline-2">
-<h2 id="orgfe24929">결론</h2>
-<div class="outline-text-2" id="text-orgfe24929">
+<div id="outline-container-org6433764" class="outline-2">
+<h2 id="org6433764">결론</h2>
+<div class="outline-text-2" id="text-org6433764">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
@@ -187,6 +191,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -213,6 +220,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -231,11 +241,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
