--- a/note/flake8.html
+++ b/note/flake8.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,11 +69,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org89b91d0">설치</a></li>
-<li><a href="#orgc113e5a">사용법</a></li>
-<li><a href="#org683e508">설정 파일</a></li>
-<li><a href="#orgec6d144">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#orgde1a99d">외부 링크</a></li>
+<li><a href="#orgcfb7a56">설치</a></li>
+<li><a href="#orgbd93c45">사용법</a></li>
+<li><a href="#orge0dfccf">설정 파일</a></li>
+<li><a href="#org6bbed62">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#orgbf7f4f8">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -81,9 +85,9 @@
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org89b91d0" class="outline-2">
-<h2 id="org89b91d0">설치</h2>
-<div class="outline-text-2" id="text-org89b91d0">
+<div id="outline-container-orgcfb7a56" class="outline-2">
+<h2 id="orgcfb7a56">설치</h2>
+<div class="outline-text-2" id="text-orgcfb7a56">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -93,9 +97,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgc113e5a" class="outline-2">
-<h2 id="orgc113e5a">사용법</h2>
-<div class="outline-text-2" id="text-orgc113e5a">
+<div id="outline-container-orgbd93c45" class="outline-2">
+<h2 id="orgbd93c45">사용법</h2>
+<div class="outline-text-2" id="text-orgbd93c45">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -115,9 +119,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org683e508" class="outline-2">
-<h2 id="org683e508">설정 파일</h2>
-<div class="outline-text-2" id="text-org683e508">
+<div id="outline-container-orge0dfccf" class="outline-2">
+<h2 id="orge0dfccf">설정 파일</h2>
+<div class="outline-text-2" id="text-orge0dfccf">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -149,9 +153,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orgec6d144" class="outline-2">
-<h2 id="orgec6d144">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orgec6d144">
+<div id="outline-container-org6bbed62" class="outline-2">
+<h2 id="org6bbed62">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org6bbed62">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -184,9 +188,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-orgde1a99d" class="outline-2">
-<h2 id="orgde1a99d">외부 링크</h2>
-<div class="outline-text-2" id="text-orgde1a99d">
+<div id="outline-container-orgbf7f4f8" class="outline-2">
+<h2 id="orgbf7f4f8">외부 링크</h2>
+<div class="outline-text-2" id="text-orgbf7f4f8">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
@@ -202,6 +206,9 @@ exclude = file_to_exclude.py
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -211,6 +218,9 @@ exclude = file_to_exclude.py
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -229,11 +239,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
