--- a/note/instance.html
+++ b/note/instance.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,32 +69,32 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge73d813">프로세스 개념</a></li>
-<li><a href="#orgc4c49d5">특정 서비스의 용어</a></li>
-<li><a href="#org4c0b372">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#orgc234e5f">프로세스 개념</a></li>
+<li><a href="#orga31dea9">특정 서비스의 용어</a></li>
+<li><a href="#orge33aae8">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orge73d813" class="outline-2">
-<h2 id="orge73d813">프로세스 개념</h2>
-<div class="outline-text-2" id="text-orge73d813">
+<div id="outline-container-orgc234e5f" class="outline-2">
+<h2 id="orgc234e5f">프로세스 개념</h2>
+<div class="outline-text-2" id="text-orgc234e5f">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc4c49d5" class="outline-2">
-<h2 id="orgc4c49d5">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-orgc4c49d5">
+<div id="outline-container-orga31dea9" class="outline-2">
+<h2 id="orga31dea9">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-orga31dea9">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4c0b372" class="outline-2">
-<h2 id="org4c0b372">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-org4c0b372">
+<div id="outline-container-orge33aae8" class="outline-2">
+<h2 id="orge33aae8">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-orge33aae8">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
@@ -139,6 +143,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -179,6 +186,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -197,11 +207,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
