--- a/note/macos.html
+++ b/note/macos.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,9 +69,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org12d53bf">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org7c2623a">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org3654390">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgfc7119f">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org3a37b1f">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgd643614">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -92,17 +96,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org12d53bf" class="outline-2">
-<h2 id="org12d53bf">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org12d53bf">
+<div id="outline-container-orgfc7119f" class="outline-2">
+<h2 id="orgfc7119f">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgfc7119f">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org7c2623a" class="outline-2">
-<h2 id="org7c2623a">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org7c2623a">
+<div id="outline-container-org3a37b1f" class="outline-2">
+<h2 id="org3a37b1f">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org3a37b1f">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -122,9 +126,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org3654390" class="outline-2">
-<h2 id="org3654390">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org3654390">
+<div id="outline-container-orgd643614" class="outline-2">
+<h2 id="orgd643614">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgd643614">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -148,6 +152,9 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -300,6 +307,9 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -318,11 +328,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
