--- a/note/mongodb.html
+++ b/note/mongodb.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,44 +69,44 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdb5d0c0">CLI 사용법 메모</a>
+<li><a href="#orgaeb0fb1">CLI 사용법 메모</a>
 <ul>
-<li><a href="#org874511f">연결하기(Connect)</a></li>
-<li><a href="#org5360753">데이터베이스 선택(Select Database)</a></li>
-<li><a href="#orgb1070cf">데이터베이스 목록 보기(List Databases)</a></li>
-<li><a href="#orgbbef20e">컬렉션 조회(List Collections)</a></li>
-<li><a href="#orgc3a0bac">삽입(Insert)</a></li>
-<li><a href="#org38d3212">조회(Find or Query)</a></li>
-<li><a href="#orgcbacc35">수정(Update)</a></li>
-<li><a href="#orgeb2c479">삭제(Remove)</a></li>
+<li><a href="#org7cc390e">연결하기(Connect)</a></li>
+<li><a href="#orge6b779b">데이터베이스 선택(Select Database)</a></li>
+<li><a href="#orga593c10">데이터베이스 목록 보기(List Databases)</a></li>
+<li><a href="#org6221e8f">컬렉션 조회(List Collections)</a></li>
+<li><a href="#orgad0a946">삽입(Insert)</a></li>
+<li><a href="#orgdfa13f6">조회(Find or Query)</a></li>
+<li><a href="#org6abee0e">수정(Update)</a></li>
+<li><a href="#orge41f348">삭제(Remove)</a></li>
 </ul>
 </li>
-<li><a href="#org4646d38">조회법 메모</a>
+<li><a href="#orgbfcfc90">조회법 메모</a>
 <ul>
-<li><a href="#org66108ab">정렬, 위치, 갯수 제한</a></li>
-<li><a href="#orgc5011e9">수치 비교</a></li>
-<li><a href="#orgb0b7e2d">특정 필드 표시하지 않기</a></li>
-<li><a href="#orgef9adeb">특정 필드가 있는 도큐먼트 검색하기</a></li>
-<li><a href="#org95d9a4a">Not Null???</a></li>
+<li><a href="#org673ec74">정렬, 위치, 갯수 제한</a></li>
+<li><a href="#org1fd5ee9">수치 비교</a></li>
+<li><a href="#org0ee30ff">특정 필드 표시하지 않기</a></li>
+<li><a href="#org81c238d">특정 필드가 있는 도큐먼트 검색하기</a></li>
+<li><a href="#org37e7f99">Not Null???</a></li>
 </ul>
 </li>
-<li><a href="#org62e8da5">어그리게이트(Aggregate)</a>
+<li><a href="#orge2d710c">어그리게이트(Aggregate)</a>
 <ul>
-<li><a href="#orge913bcc">기초</a></li>
-<li><a href="#orgcb3bb30">예제</a></li>
-<li><a href="#org4ac10f9">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
+<li><a href="#orge29ac48">기초</a></li>
+<li><a href="#orgab63abb">예제</a></li>
+<li><a href="#org08216cd">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
 </ul>
 </li>
-<li><a href="#orga2a6a6a">백업 및 복원(Dump and Restore)</a>
+<li><a href="#org0a0f5fa">백업 및 복원(Dump and Restore)</a>
 <ul>
-<li><a href="#org37d9ae0">백업(Dump)</a></li>
-<li><a href="#org0f9d26b">복원(Restore)</a></li>
+<li><a href="#orgadf8931">백업(Dump)</a></li>
+<li><a href="#org7e20854">복원(Restore)</a></li>
 </ul>
 </li>
-<li><a href="#org0b56136">기타</a>
+<li><a href="#org4f100ce">기타</a>
 <ul>
-<li><a href="#orge6a394c">컬렉션 몽땅 비우기(지우기)</a></li>
-<li><a href="#orgd7b00d8">Replica Set 에서 Primary 바꾸기</a></li>
+<li><a href="#org7e033c8">컬렉션 몽땅 비우기(지우기)</a></li>
+<li><a href="#org726839a">Replica Set 에서 Primary 바꾸기</a></li>
 </ul>
 </li>
 </ul>
@@ -115,13 +119,13 @@ MongoDB 는 이름처럼 Database 시스템이다.
 이로 인해 NoSQL DB 의 대명사이기도 하다.
 </p>
 
-<div id="outline-container-orgdb5d0c0" class="outline-2">
-<h2 id="orgdb5d0c0"><a href="cli.html">CLI</a> 사용법 메모</h2>
-<div class="outline-text-2" id="text-orgdb5d0c0">
+<div id="outline-container-orgaeb0fb1" class="outline-2">
+<h2 id="orgaeb0fb1"><a href="cli.html">CLI</a> 사용법 메모</h2>
+<div class="outline-text-2" id="text-orgaeb0fb1">
 </div>
-<div id="outline-container-org874511f" class="outline-3">
-<h3 id="org874511f">연결하기(Connect)</h3>
-<div class="outline-text-3" id="text-org874511f">
+<div id="outline-container-org7cc390e" class="outline-3">
+<h3 id="org7cc390e">연결하기(Connect)</h3>
+<div class="outline-text-3" id="text-org7cc390e">
 <div class="org-src-container">
 <pre class="src src-bash">mongo --host foo.bar --port <span style="color: #da8548; font-weight: bold;">27017</span>
 </pre>
@@ -142,18 +146,18 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5360753" class="outline-3">
-<h3 id="org5360753">데이터베이스 선택(Select Database)</h3>
-<div class="outline-text-3" id="text-org5360753">
+<div id="outline-container-orge6b779b" class="outline-3">
+<h3 id="orge6b779b">데이터베이스 선택(Select Database)</h3>
+<div class="outline-text-3" id="text-orge6b779b">
 <div class="org-src-container">
 <pre class="src src-javascript">use dbname
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgb1070cf" class="outline-3">
-<h3 id="orgb1070cf">데이터베이스 목록 보기(List Databases)</h3>
-<div class="outline-text-3" id="text-orgb1070cf">
+<div id="outline-container-orga593c10" class="outline-3">
+<h3 id="orga593c10">데이터베이스 목록 보기(List Databases)</h3>
+<div class="outline-text-3" id="text-orga593c10">
 <div class="org-src-container">
 <pre class="src src-javascript">db.adminCommand({listDatabases: <span style="color: #da8548; font-weight: bold;">1</span>})
 </pre>
@@ -164,27 +168,27 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbbef20e" class="outline-3">
-<h3 id="orgbbef20e">컬렉션 조회(List Collections)</h3>
-<div class="outline-text-3" id="text-orgbbef20e">
+<div id="outline-container-org6221e8f" class="outline-3">
+<h3 id="org6221e8f">컬렉션 조회(List Collections)</h3>
+<div class="outline-text-3" id="text-org6221e8f">
 <div class="org-src-container">
 <pre class="src src-javascript">show collections
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgc3a0bac" class="outline-3">
-<h3 id="orgc3a0bac">삽입(Insert)</h3>
-<div class="outline-text-3" id="text-orgc3a0bac">
+<div id="outline-container-orgad0a946" class="outline-3">
+<h3 id="orgad0a946">삽입(Insert)</h3>
+<div class="outline-text-3" id="text-orgad0a946">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.insert({key: value, ...})
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org38d3212" class="outline-3">
-<h3 id="org38d3212">조회(Find or Query)</h3>
-<div class="outline-text-3" id="text-org38d3212">
+<div id="outline-container-orgdfa13f6" class="outline-3">
+<h3 id="orgdfa13f6">조회(Find or Query)</h3>
+<div class="outline-text-3" id="text-orgdfa13f6">
 <div class="org-src-container">
 <pre class="src src-javascript">db.colllection.find({key: value, ...})
 </pre>
@@ -194,9 +198,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgcbacc35" class="outline-3">
-<h3 id="orgcbacc35">수정(Update)</h3>
-<div class="outline-text-3" id="text-orgcbacc35">
+<div id="outline-container-org6abee0e" class="outline-3">
+<h3 id="org6abee0e">수정(Update)</h3>
+<div class="outline-text-3" id="text-org6abee0e">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.update({key: value, ...}, {$set: {key: value, ...}})
 </pre>
@@ -214,9 +218,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgeb2c479" class="outline-3">
-<h3 id="orgeb2c479">삭제(Remove)</h3>
-<div class="outline-text-3" id="text-orgeb2c479">
+<div id="outline-container-orge41f348" class="outline-3">
+<h3 id="orge41f348">삭제(Remove)</h3>
+<div class="outline-text-3" id="text-orge41f348">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({key: value, ...})
 </pre>
@@ -227,13 +231,13 @@ find 에서 쓰는 쿼리와 동일하다.
 </div>
 </div>
 </div>
-<div id="outline-container-org4646d38" class="outline-2">
-<h2 id="org4646d38">조회법 메모</h2>
-<div class="outline-text-2" id="text-org4646d38">
+<div id="outline-container-orgbfcfc90" class="outline-2">
+<h2 id="orgbfcfc90">조회법 메모</h2>
+<div class="outline-text-2" id="text-orgbfcfc90">
 </div>
-<div id="outline-container-org66108ab" class="outline-3">
-<h3 id="org66108ab">정렬, 위치, 갯수 제한</h3>
-<div class="outline-text-3" id="text-org66108ab">
+<div id="outline-container-org673ec74" class="outline-3">
+<h3 id="org673ec74">정렬, 위치, 갯수 제한</h3>
+<div class="outline-text-3" id="text-org673ec74">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...})
              .sort({field: -<span style="color: #da8548; font-weight: bold;">1</span>})
@@ -246,9 +250,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc5011e9" class="outline-3">
-<h3 id="orgc5011e9">수치 비교</h3>
-<div class="outline-text-3" id="text-orgc5011e9">
+<div id="outline-container-org1fd5ee9" class="outline-3">
+<h3 id="org1fd5ee9">수치 비교</h3>
+<div class="outline-text-3" id="text-org1fd5ee9">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$gt: <span style="color: #da8548; font-weight: bold;">10</span>}})
 </pre>
@@ -261,9 +265,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgb0b7e2d" class="outline-3">
-<h3 id="orgb0b7e2d">특정 필드 표시하지 않기</h3>
-<div class="outline-text-3" id="text-orgb0b7e2d">
+<div id="outline-container-org0ee30ff" class="outline-3">
+<h3 id="org0ee30ff">특정 필드 표시하지 않기</h3>
+<div class="outline-text-3" id="text-org0ee30ff">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...},
                    {keyToHide: <span style="color: #da8548; font-weight: bold;">0</span>})
@@ -275,9 +279,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgef9adeb" class="outline-3">
-<h3 id="orgef9adeb">특정 필드가 있는 도큐먼트 검색하기</h3>
-<div class="outline-text-3" id="text-orgef9adeb">
+<div id="outline-container-org81c238d" class="outline-3">
+<h3 id="org81c238d">특정 필드가 있는 도큐먼트 검색하기</h3>
+<div class="outline-text-3" id="text-org81c238d">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$exists: <span style="color: #a9a1e1;">true</span>}})
 </pre>
@@ -287,9 +291,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-org95d9a4a" class="outline-3">
-<h3 id="org95d9a4a">Not Null???</h3>
-<div class="outline-text-3" id="text-org95d9a4a">
+<div id="outline-container-org37e7f99" class="outline-3">
+<h3 id="org37e7f99">Not Null???</h3>
+<div class="outline-text-3" id="text-org37e7f99">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$ne: <span style="color: #a9a1e1;">null</span>}})
 </pre>
@@ -300,9 +304,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </div>
 </div>
 </div>
-<div id="outline-container-org62e8da5" class="outline-2">
-<h2 id="org62e8da5">어그리게이트(Aggregate)</h2>
-<div class="outline-text-2" id="text-org62e8da5">
+<div id="outline-container-orge2d710c" class="outline-2">
+<h2 id="orge2d710c">어그리게이트(Aggregate)</h2>
+<div class="outline-text-2" id="text-orge2d710c">
 <p>
 어그리게이트는 도큐먼트를 파이프 라인을 통해
 여러 차례에 걸쳐서 처리할 수 있도록 하는 특수한 기능이다.
@@ -310,9 +314,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 이걸 결과로 넘기는 식이 일렬로 처리되는 것과 비슷하다.
 </p>
 </div>
-<div id="outline-container-orge913bcc" class="outline-3">
-<h3 id="orge913bcc">기초</h3>
-<div class="outline-text-3" id="text-orge913bcc">
+<div id="outline-container-orge29ac48" class="outline-3">
+<h3 id="orge29ac48">기초</h3>
+<div class="outline-text-3" id="text-orge29ac48">
 <p>
 어그리게이트의 기본 문법은 아래와 같다.
 </p>
@@ -327,9 +331,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgcb3bb30" class="outline-3">
-<h3 id="orgcb3bb30">예제</h3>
-<div class="outline-text-3" id="text-orgcb3bb30">
+<div id="outline-container-orgab63abb" class="outline-3">
+<h3 id="orgab63abb">예제</h3>
+<div class="outline-text-3" id="text-orgab63abb">
 <div class="org-src-container">
 <pre class="src src-text">db.user.aggregate([
     {$match:
@@ -362,9 +366,9 @@ user라는 컬렉션에서 2000년 이후로 가입한 사람들만 간추려서
 </p>
 </div>
 </div>
-<div id="outline-container-org4ac10f9" class="outline-3">
-<h3 id="org4ac10f9">몇 가지 유용한 파이프라인 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org4ac10f9">
+<div id="outline-container-org08216cd" class="outline-3">
+<h3 id="org08216cd">몇 가지 유용한 파이프라인 오퍼레이터</h3>
+<div class="outline-text-3" id="text-org08216cd">
 <ul class="org-ul">
 <li><code>$match</code> 필터 혹은 쿼리(find와 비슷)</li>
 <li><code>$group</code> 특정한 필드를 기준으로 모으기(grouping)</li>
@@ -388,13 +392,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-orga2a6a6a" class="outline-2">
-<h2 id="orga2a6a6a">백업 및 복원(Dump and Restore)</h2>
-<div class="outline-text-2" id="text-orga2a6a6a">
+<div id="outline-container-org0a0f5fa" class="outline-2">
+<h2 id="org0a0f5fa">백업 및 복원(Dump and Restore)</h2>
+<div class="outline-text-2" id="text-org0a0f5fa">
 </div>
-<div id="outline-container-org37d9ae0" class="outline-3">
-<h3 id="org37d9ae0">백업(Dump)</h3>
-<div class="outline-text-3" id="text-org37d9ae0">
+<div id="outline-container-orgadf8931" class="outline-3">
+<h3 id="orgadf8931">백업(Dump)</h3>
+<div class="outline-text-3" id="text-orgadf8931">
 <div class="org-src-container">
 <pre class="src src-bash">mongodump --host host.foo.bar <span style="color: #98be65;">\</span>
           --out /foo/bar/dump/directory <span style="color: #98be65;">\</span>
@@ -409,9 +413,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-org0f9d26b" class="outline-3">
-<h3 id="org0f9d26b">복원(Restore)</h3>
-<div class="outline-text-3" id="text-org0f9d26b">
+<div id="outline-container-org7e20854" class="outline-3">
+<h3 id="org7e20854">복원(Restore)</h3>
+<div class="outline-text-3" id="text-org7e20854">
 <div class="org-src-container">
 <pre class="src src-bash">mongorestore --host host.foo.bar /foo/bar/dump/directory
 </pre>
@@ -423,13 +427,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-org0b56136" class="outline-2">
-<h2 id="org0b56136">기타</h2>
-<div class="outline-text-2" id="text-org0b56136">
+<div id="outline-container-org4f100ce" class="outline-2">
+<h2 id="org4f100ce">기타</h2>
+<div class="outline-text-2" id="text-org4f100ce">
 </div>
-<div id="outline-container-orge6a394c" class="outline-3">
-<h3 id="orge6a394c">컬렉션 몽땅 비우기(지우기)</h3>
-<div class="outline-text-3" id="text-orge6a394c">
+<div id="outline-container-org7e033c8" class="outline-3">
+<h3 id="org7e033c8">컬렉션 몽땅 비우기(지우기)</h3>
+<div class="outline-text-3" id="text-org7e033c8">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({})
 </pre>
@@ -439,9 +443,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd7b00d8" class="outline-3">
-<h3 id="orgd7b00d8">Replica Set 에서 Primary 바꾸기</h3>
-<div class="outline-text-3" id="text-orgd7b00d8">
+<div id="outline-container-org726839a" class="outline-3">
+<h3 id="org726839a">Replica Set 에서 Primary 바꾸기</h3>
+<div class="outline-text-3" id="text-org726839a">
 <p>
 삽질로 알아낸 정보라 이 방법 외에 다른 방법이 있을 수도 있음을 먼저 알린다.
 </p>
@@ -486,6 +490,9 @@ Pipeline Stages</a> 문서를 참고해보자.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -495,6 +502,9 @@ Pipeline Stages</a> 문서를 참고해보자.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -513,11 +523,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
