--- a/note/sh.html
+++ b/note/sh.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,27 +69,27 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4a3191c">소개</a></li>
-<li><a href="#org176a5e9">스크립팅 노트</a>
+<li><a href="#org8bc58e7">소개</a></li>
+<li><a href="#org3292463">스크립팅 노트</a>
 <ul>
-<li><a href="#org25e05a8">실행 가능한 스크립트</a></li>
-<li><a href="#org4da987f">if</a></li>
-<li><a href="#orge0c4b07">루프</a></li>
-<li><a href="#org0a43277">조건식 오퍼레이터</a></li>
-<li><a href="#org9161d18">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org73fa53e">파일 개수</a></li>
-<li><a href="#orgfca93f6">와일드카드 인자 처리</a></li>
-<li><a href="#org154b750">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org6d83fe3">에러 메시지 숨기기</a></li>
+<li><a href="#org8e10b4d">실행 가능한 스크립트</a></li>
+<li><a href="#org987178e">if</a></li>
+<li><a href="#orgc95735e">루프</a></li>
+<li><a href="#orgeec0cf4">조건식 오퍼레이터</a></li>
+<li><a href="#org2bd3cbc">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org21e9023">파일 개수</a></li>
+<li><a href="#orge9f193d">와일드카드 인자 처리</a></li>
+<li><a href="#org085ef45">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org5bd59dc">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org4a3191c" class="outline-2">
-<h2 id="org4a3191c">소개</h2>
-<div class="outline-text-2" id="text-org4a3191c">
+<div id="outline-container-org8bc58e7" class="outline-2">
+<h2 id="org8bc58e7">소개</h2>
+<div class="outline-text-2" id="text-org8bc58e7">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -94,16 +98,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org176a5e9" class="outline-2">
-<h2 id="org176a5e9">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org176a5e9">
+<div id="outline-container-org3292463" class="outline-2">
+<h2 id="org3292463">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org3292463">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org25e05a8" class="outline-3">
-<h3 id="org25e05a8">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org25e05a8">
+<div id="outline-container-org8e10b4d" class="outline-3">
+<h3 id="org8e10b4d">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org8e10b4d">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -164,9 +168,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org4da987f" class="outline-3">
-<h3 id="org4da987f">if</h3>
-<div class="outline-text-3" id="text-org4da987f">
+<div id="outline-container-org987178e" class="outline-3">
+<h3 id="org987178e">if</h3>
+<div class="outline-text-3" id="text-org987178e">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -205,9 +209,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge0c4b07" class="outline-3">
-<h3 id="orge0c4b07">루프</h3>
-<div class="outline-text-3" id="text-orge0c4b07">
+<div id="outline-container-orgc95735e" class="outline-3">
+<h3 id="orgc95735e">루프</h3>
+<div class="outline-text-3" id="text-orgc95735e">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -224,9 +228,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0a43277" class="outline-3">
-<h3 id="org0a43277">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org0a43277">
+<div id="outline-container-orgeec0cf4" class="outline-3">
+<h3 id="orgeec0cf4">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orgeec0cf4">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -241,9 +245,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9161d18" class="outline-3">
-<h3 id="org9161d18">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org9161d18">
+<div id="outline-container-org2bd3cbc" class="outline-3">
+<h3 id="org2bd3cbc">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org2bd3cbc">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -258,9 +262,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org73fa53e" class="outline-3">
-<h3 id="org73fa53e">파일 개수</h3>
-<div class="outline-text-3" id="text-org73fa53e">
+<div id="outline-container-org21e9023" class="outline-3">
+<h3 id="org21e9023">파일 개수</h3>
+<div class="outline-text-3" id="text-org21e9023">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -284,9 +288,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgfca93f6" class="outline-3">
-<h3 id="orgfca93f6">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orgfca93f6">
+<div id="outline-container-orge9f193d" class="outline-3">
+<h3 id="orge9f193d">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orge9f193d">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -304,9 +308,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org154b750" class="outline-3">
-<h3 id="org154b750">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org154b750">
+<div id="outline-container-org085ef45" class="outline-3">
+<h3 id="org085ef45">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org085ef45">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -316,9 +320,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org6d83fe3" class="outline-3">
-<h3 id="org6d83fe3">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org6d83fe3">
+<div id="outline-container-org5bd59dc" class="outline-3">
+<h3 id="org5bd59dc">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org5bd59dc">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -336,6 +340,9 @@ than, greater than or equal, less than, less than or equal</li>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -355,6 +362,9 @@ than, greater than or equal, less than, less than or equal</li>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -373,11 +383,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
