--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,11 +69,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org308fc8d">사용법</a>
+<li><a href="#org9e99734">사용법</a>
 <ul>
-<li><a href="#org9e49c53">무제한 잠자기 방지</a></li>
-<li><a href="#org4f22633">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#orgf3bd9f3">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org851feef">무제한 잠자기 방지</a></li>
+<li><a href="#org4ab98a4">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org8f0c9c4">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -80,13 +84,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org308fc8d" class="outline-2">
-<h2 id="org308fc8d">사용법</h2>
-<div class="outline-text-2" id="text-org308fc8d">
+<div id="outline-container-org9e99734" class="outline-2">
+<h2 id="org9e99734">사용법</h2>
+<div class="outline-text-2" id="text-org9e99734">
 </div>
-<div id="outline-container-org9e49c53" class="outline-3">
-<h3 id="org9e49c53">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org9e49c53">
+<div id="outline-container-org851feef" class="outline-3">
+<h3 id="org851feef">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org851feef">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -97,9 +101,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org4f22633" class="outline-3">
-<h3 id="org4f22633">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org4f22633">
+<div id="outline-container-org4ab98a4" class="outline-3">
+<h3 id="org4ab98a4">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4ab98a4">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -110,9 +114,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgf3bd9f3" class="outline-3">
-<h3 id="orgf3bd9f3">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgf3bd9f3">
+<div id="outline-container-org8f0c9c4" class="outline-3">
+<h3 id="org8f0c9c4">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org8f0c9c4">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -130,6 +134,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -139,6 +146,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -157,11 +167,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
