--- a/note/dd.html
+++ b/note/dd.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,9 +69,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1f2ad63">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#orgf3e2012">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orga8a8052">팁</a></li>
+<li><a href="#org1fe95ae">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#orgbd9ee57">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#orgd44eae2">팁</a></li>
 </ul>
 </div>
 </div>
@@ -84,9 +88,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org1f2ad63" class="outline-2">
-<h2 id="org1f2ad63">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org1f2ad63">
+<div id="outline-container-org1fe95ae" class="outline-2">
+<h2 id="org1fe95ae">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org1fe95ae">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -136,9 +140,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgf3e2012" class="outline-2">
-<h2 id="orgf3e2012">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-orgf3e2012">
+<div id="outline-container-orgbd9ee57" class="outline-2">
+<h2 id="orgbd9ee57">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-orgbd9ee57">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -160,9 +164,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orga8a8052" class="outline-2">
-<h2 id="orga8a8052">팁</h2>
-<div class="outline-text-2" id="text-orga8a8052">
+<div id="outline-container-orgd44eae2" class="outline-2">
+<h2 id="orgd44eae2">팁</h2>
+<div class="outline-text-2" id="text-orgd44eae2">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -177,6 +181,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -196,6 +203,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -214,11 +224,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
