--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,12 +69,12 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org50682b6">단축키</a>
+<li><a href="#org56cbc52">단축키</a>
 <ul>
-<li><a href="#org2ab863b">프로젝트(Project)</a></li>
-<li><a href="#orgd79645b">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org496eea6">타임라인(Timeline)</a></li>
-<li><a href="#orge755c97">플레이(Play or Preview)</a></li>
+<li><a href="#org7e45a9e">프로젝트(Project)</a></li>
+<li><a href="#org7d231d9">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org4ffa2f4">타임라인(Timeline)</a></li>
+<li><a href="#org0d06cb3">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -82,13 +86,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org50682b6" class="outline-2">
-<h2 id="org50682b6">단축키</h2>
-<div class="outline-text-2" id="text-org50682b6">
+<div id="outline-container-org56cbc52" class="outline-2">
+<h2 id="org56cbc52">단축키</h2>
+<div class="outline-text-2" id="text-org56cbc52">
 </div>
-<div id="outline-container-org2ab863b" class="outline-3">
-<h3 id="org2ab863b">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org2ab863b">
+<div id="outline-container-org7e45a9e" class="outline-3">
+<h3 id="org7e45a9e">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org7e45a9e">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -97,9 +101,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgd79645b" class="outline-3">
-<h3 id="orgd79645b">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-orgd79645b">
+<div id="outline-container-org7d231d9" class="outline-3">
+<h3 id="org7d231d9">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org7d231d9">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -114,9 +118,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org496eea6" class="outline-3">
-<h3 id="org496eea6">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org496eea6">
+<div id="outline-container-org4ffa2f4" class="outline-3">
+<h3 id="org4ffa2f4">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org4ffa2f4">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -141,9 +145,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orge755c97" class="outline-3">
-<h3 id="orge755c97">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orge755c97">
+<div id="outline-container-org0d06cb3" class="outline-3">
+<h3 id="org0d06cb3">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org0d06cb3">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -160,6 +164,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -179,6 +186,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -197,11 +207,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
