--- a/note/find.html
+++ b/note/find.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,14 +69,14 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6e468bf">기본 사용법</a>
+<li><a href="#org943e89b">기본 사용법</a>
 <ul>
-<li><a href="#org76bd127">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org8b2c8ba">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orge7b756b">검색 패턴</a></li>
-<li><a href="#org70fb2f7">대소문자 무시하기</a></li>
-<li><a href="#org2caed42">검색 종류 지정하기</a></li>
-<li><a href="#org53747af">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#orgdc1f297">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org588f7c1">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org83af791">검색 패턴</a></li>
+<li><a href="#org5355456">대소문자 무시하기</a></li>
+<li><a href="#orgde4ba66">검색 종류 지정하기</a></li>
+<li><a href="#org7b04496">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -83,13 +87,13 @@
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org6e468bf" class="outline-2">
-<h2 id="org6e468bf">기본 사용법</h2>
-<div class="outline-text-2" id="text-org6e468bf">
+<div id="outline-container-org943e89b" class="outline-2">
+<h2 id="org943e89b">기본 사용법</h2>
+<div class="outline-text-2" id="text-org943e89b">
 </div>
-<div id="outline-container-org76bd127" class="outline-3">
-<h3 id="org76bd127">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org76bd127">
+<div id="outline-container-orgdc1f297" class="outline-3">
+<h3 id="orgdc1f297">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orgdc1f297">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -101,9 +105,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org8b2c8ba" class="outline-3">
-<h3 id="org8b2c8ba">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org8b2c8ba">
+<div id="outline-container-org588f7c1" class="outline-3">
+<h3 id="org588f7c1">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org588f7c1">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -113,9 +117,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orge7b756b" class="outline-3">
-<h3 id="orge7b756b">검색 패턴</h3>
-<div class="outline-text-3" id="text-orge7b756b">
+<div id="outline-container-org83af791" class="outline-3">
+<h3 id="org83af791">검색 패턴</h3>
+<div class="outline-text-3" id="text-org83af791">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -128,9 +132,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org70fb2f7" class="outline-3">
-<h3 id="org70fb2f7">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org70fb2f7">
+<div id="outline-container-org5355456" class="outline-3">
+<h3 id="org5355456">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org5355456">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -141,9 +145,9 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org2caed42" class="outline-3">
-<h3 id="org2caed42">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org2caed42">
+<div id="outline-container-orgde4ba66" class="outline-3">
+<h3 id="orgde4ba66">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-orgde4ba66">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -161,9 +165,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org53747af" class="outline-3">
-<h3 id="org53747af">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org53747af">
+<div id="outline-container-org7b04496" class="outline-3">
+<h3 id="org7b04496">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org7b04496">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -198,6 +202,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -207,6 +214,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -225,11 +235,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
