--- a/note/flutter.html
+++ b/note/flutter.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,10 +69,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf3539f2">문제 해결</a>
+<li><a href="#orgc843d9d">문제 해결</a>
 <ul>
-<li><a href="#org4650ed7">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orgd7df1ca">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org2183aaa">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org91913d3">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -84,13 +88,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orgf3539f2" class="outline-2">
-<h2 id="orgf3539f2">문제 해결</h2>
-<div class="outline-text-2" id="text-orgf3539f2">
+<div id="outline-container-orgc843d9d" class="outline-2">
+<h2 id="orgc843d9d">문제 해결</h2>
+<div class="outline-text-2" id="text-orgc843d9d">
 </div>
-<div id="outline-container-org4650ed7" class="outline-3">
-<h3 id="org4650ed7">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org4650ed7">
+<div id="outline-container-org2183aaa" class="outline-3">
+<h3 id="org2183aaa">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org2183aaa">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -123,9 +127,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orgd7df1ca" class="outline-3">
-<h3 id="orgd7df1ca">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orgd7df1ca">
+<div id="outline-container-org91913d3" class="outline-3">
+<h3 id="org91913d3">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org91913d3">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -167,6 +171,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -176,6 +183,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -194,11 +204,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
