--- a/note/gitignore.html
+++ b/note/gitignore.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,20 +69,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org82da045">.gitignore</a></li>
-<li><a href="#orgeac9ce4">gitignore.io</a>
+<li><a href="#org25daac1">.gitignore</a></li>
+<li><a href="#org5aa55d4">gitignore.io</a>
 <ul>
-<li><a href="#org9999254">사용법</a></li>
-<li><a href="#org3ca0a70">Command Line</a></li>
+<li><a href="#org216ceb9">사용법</a></li>
+<li><a href="#orgde4605f">Command Line</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org82da045" class="outline-2">
-<h2 id="org82da045">.gitignore</h2>
-<div class="outline-text-2" id="text-org82da045">
+<div id="outline-container-org25daac1" class="outline-2">
+<h2 id="org25daac1">.gitignore</h2>
+<div class="outline-text-2" id="text-org25daac1">
 <p>
 <code>.gitignore</code> 파일은 <a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
 주로 프로젝트 루트 디렉터리에 위치하지만 필요하다면 각 하부 디렉터리에도 생성할 수 있다.
@@ -115,9 +119,9 @@ env/
 </div>
 </div>
 </div>
-<div id="outline-container-orgeac9ce4" class="outline-2">
-<h2 id="orgeac9ce4">gitignore.io</h2>
-<div class="outline-text-2" id="text-orgeac9ce4">
+<div id="outline-container-org5aa55d4" class="outline-2">
+<h2 id="org5aa55d4">gitignore.io</h2>
+<div class="outline-text-2" id="text-org5aa55d4">
 <p>
 <a target="_blank" href="https://www.gitignore.io/">🌏gitignore.io</a>라는 사이트는 프로젝트나 언어 등 몇 가지 기준으로
 자주 쓰이는 <code>.gitignore</code> 목록을 생성해 주는 서비스다.
@@ -126,18 +130,18 @@ env/
 gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
 </p>
 </div>
-<div id="outline-container-org9999254" class="outline-3">
-<h3 id="org9999254">사용법</h3>
-<div class="outline-text-3" id="text-org9999254">
+<div id="outline-container-org216ceb9" class="outline-3">
+<h3 id="org216ceb9">사용법</h3>
+<div class="outline-text-3" id="text-org216ceb9">
 <p>
 사용 방법은 사이트 중앙의 텍스트 필드에 언어나 프로젝트 이름을 써 넣고 Create 버튼을 누르면 된다.
 그 후 나오는 내용을 <code>.gitignore</code> 파일에 그대로 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org3ca0a70" class="outline-3">
-<h3 id="org3ca0a70">Command Line</h3>
-<div class="outline-text-3" id="text-org3ca0a70">
+<div id="outline-container-orgde4605f" class="outline-3">
+<h3 id="orgde4605f">Command Line</h3>
+<div class="outline-text-3" id="text-orgde4605f">
 <p>
 일반적인 웹 사이트인 줄 알았는데 약간 특수한 트윅으로 <a href="cli.html">CLI</a> 도구가 제공된다.
 정확히 말해서 <a href="shell.html">셸</a> 함수를 초기화 파일에 쓰는 형태로 설정해서 사용하는 도구다.
@@ -169,6 +173,9 @@ gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -178,6 +185,9 @@ gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -196,11 +206,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
