--- a/note/grep.html
+++ b/note/grep.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,16 +69,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org15ce38a">기본 사용법</a></li>
-<li><a href="#orgf8b03f3">대소문자 무시</a></li>
-<li><a href="#orgcb81d2c">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#org7c6bd06">재귀(Recursive) 검색</a></li>
-<li><a href="#org51905c5">검색된 파일 이름만 보기</a></li>
-<li><a href="#org66fd359">단어만 검색하기</a></li>
-<li><a href="#orgb6ad8c6">줄 번호(Line Number) 보기</a></li>
-<li><a href="#orgbdd4c83">발견 개수 보기</a></li>
-<li><a href="#org5167c78">검색되지 않는 것만 보기</a></li>
-<li><a href="#org2982f2b">정규표현식</a></li>
+<li><a href="#org577db1d">기본 사용법</a></li>
+<li><a href="#orgc39cd94">대소문자 무시</a></li>
+<li><a href="#org534ed10">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#org346b0e4">재귀(Recursive) 검색</a></li>
+<li><a href="#orgc4839fc">검색된 파일 이름만 보기</a></li>
+<li><a href="#orgbed2356">단어만 검색하기</a></li>
+<li><a href="#org15ec048">줄 번호(Line Number) 보기</a></li>
+<li><a href="#org75a76ca">발견 개수 보기</a></li>
+<li><a href="#org6fe9076">검색되지 않는 것만 보기</a></li>
+<li><a href="#orgd9df8e7">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -82,9 +86,9 @@
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org15ce38a" class="outline-2">
-<h2 id="org15ce38a">기본 사용법</h2>
-<div class="outline-text-2" id="text-org15ce38a">
+<div id="outline-container-org577db1d" class="outline-2">
+<h2 id="org577db1d">기본 사용법</h2>
+<div class="outline-text-2" id="text-org577db1d">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -111,9 +115,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgf8b03f3" class="outline-2">
-<h2 id="orgf8b03f3">대소문자 무시</h2>
-<div class="outline-text-2" id="text-orgf8b03f3">
+<div id="outline-container-orgc39cd94" class="outline-2">
+<h2 id="orgc39cd94">대소문자 무시</h2>
+<div class="outline-text-2" id="text-orgc39cd94">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -123,9 +127,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-orgcb81d2c" class="outline-2">
-<h2 id="orgcb81d2c">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-orgcb81d2c">
+<div id="outline-container-org534ed10" class="outline-2">
+<h2 id="org534ed10">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-org534ed10">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -135,9 +139,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org7c6bd06" class="outline-2">
-<h2 id="org7c6bd06">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-org7c6bd06">
+<div id="outline-container-org346b0e4" class="outline-2">
+<h2 id="org346b0e4">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-org346b0e4">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -163,9 +167,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org51905c5" class="outline-2">
-<h2 id="org51905c5">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-org51905c5">
+<div id="outline-container-orgc4839fc" class="outline-2">
+<h2 id="orgc4839fc">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-orgc4839fc">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -180,9 +184,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org66fd359" class="outline-2">
-<h2 id="org66fd359">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-org66fd359">
+<div id="outline-container-orgbed2356" class="outline-2">
+<h2 id="orgbed2356">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-orgbed2356">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -195,9 +199,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgb6ad8c6" class="outline-2">
-<h2 id="orgb6ad8c6">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-orgb6ad8c6">
+<div id="outline-container-org15ec048" class="outline-2">
+<h2 id="org15ec048">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-org15ec048">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -210,9 +214,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgbdd4c83" class="outline-2">
-<h2 id="orgbdd4c83">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-orgbdd4c83">
+<div id="outline-container-org75a76ca" class="outline-2">
+<h2 id="org75a76ca">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-org75a76ca">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -225,9 +229,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org5167c78" class="outline-2">
-<h2 id="org5167c78">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-org5167c78">
+<div id="outline-container-org6fe9076" class="outline-2">
+<h2 id="org6fe9076">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-org6fe9076">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -240,9 +244,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org2982f2b" class="outline-2">
-<h2 id="org2982f2b">정규표현식</h2>
-<div class="outline-text-2" id="text-org2982f2b">
+<div id="outline-container-orgd9df8e7" class="outline-2">
+<h2 id="orgd9df8e7">정규표현식</h2>
+<div class="outline-text-2" id="text-orgd9df8e7">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
@@ -269,6 +273,9 @@ this is sample
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -278,6 +285,9 @@ this is sample
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -296,11 +306,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
