--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,22 +69,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb0edeac">기본 사용법</a>
+<li><a href="#orgfdc38b9">기본 사용법</a>
 <ul>
-<li><a href="#orgf813057">패키지 검색</a></li>
-<li><a href="#org03f93c4">패키지 정보</a></li>
-<li><a href="#orgdc2d889">패키지 설치</a></li>
-<li><a href="#orgda27bc9">만료된 버전 확인</a></li>
-<li><a href="#org32f81a2">패키지 업그레이드</a></li>
-<li><a href="#org118f3d8">구 버전 삭제하기</a></li>
-<li><a href="#org647eb2f">패키지 삭제(uninstall)</a></li>
-<li><a href="#orgd4750a9">의사 양반(?)</a></li>
+<li><a href="#org05e0f5e">패키지 검색</a></li>
+<li><a href="#org90805ea">패키지 정보</a></li>
+<li><a href="#org78326c3">패키지 설치</a></li>
+<li><a href="#org0141564">만료된 버전 확인</a></li>
+<li><a href="#org952ba9e">패키지 업그레이드</a></li>
+<li><a href="#orgfc15f89">구 버전 삭제하기</a></li>
+<li><a href="#org16166e8">패키지 삭제(uninstall)</a></li>
+<li><a href="#org88459d6">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org3abba19">구 버전 패키지 사용하기</a></li>
-<li><a href="#org3f1e187">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#org6ed2e93">Cask</a></li>
-<li><a href="#org930eee1">외부 링크</a></li>
+<li><a href="#org26e6703">구 버전 패키지 사용하기</a></li>
+<li><a href="#orgafd4ca9">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgdcef8d6">Cask</a></li>
+<li><a href="#org641b682">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -91,31 +95,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-orgb0edeac" class="outline-2">
-<h2 id="orgb0edeac">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgb0edeac">
+<div id="outline-container-orgfdc38b9" class="outline-2">
+<h2 id="orgfdc38b9">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgfdc38b9">
 </div>
-<div id="outline-container-orgf813057" class="outline-3">
-<h3 id="orgf813057">패키지 검색</h3>
-<div class="outline-text-3" id="text-orgf813057">
+<div id="outline-container-org05e0f5e" class="outline-3">
+<h3 id="org05e0f5e">패키지 검색</h3>
+<div class="outline-text-3" id="text-org05e0f5e">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org03f93c4" class="outline-3">
-<h3 id="org03f93c4">패키지 정보</h3>
-<div class="outline-text-3" id="text-org03f93c4">
+<div id="outline-container-org90805ea" class="outline-3">
+<h3 id="org90805ea">패키지 정보</h3>
+<div class="outline-text-3" id="text-org90805ea">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgdc2d889" class="outline-3">
-<h3 id="orgdc2d889">패키지 설치</h3>
-<div class="outline-text-3" id="text-orgdc2d889">
+<div id="outline-container-org78326c3" class="outline-3">
+<h3 id="org78326c3">패키지 설치</h3>
+<div class="outline-text-3" id="text-org78326c3">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -126,9 +130,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgda27bc9" class="outline-3">
-<h3 id="orgda27bc9">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orgda27bc9">
+<div id="outline-container-org0141564" class="outline-3">
+<h3 id="org0141564">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-org0141564">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -140,9 +144,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org32f81a2" class="outline-3">
-<h3 id="org32f81a2">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org32f81a2">
+<div id="outline-container-org952ba9e" class="outline-3">
+<h3 id="org952ba9e">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org952ba9e">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -156,9 +160,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org118f3d8" class="outline-3">
-<h3 id="org118f3d8">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org118f3d8">
+<div id="outline-container-orgfc15f89" class="outline-3">
+<h3 id="orgfc15f89">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-orgfc15f89">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -172,18 +176,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org647eb2f" class="outline-3">
-<h3 id="org647eb2f">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org647eb2f">
+<div id="outline-container-org16166e8" class="outline-3">
+<h3 id="org16166e8">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org16166e8">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd4750a9" class="outline-3">
-<h3 id="orgd4750a9">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-orgd4750a9">
+<div id="outline-container-org88459d6" class="outline-3">
+<h3 id="org88459d6">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org88459d6">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -194,9 +198,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org3abba19" class="outline-2">
-<h2 id="org3abba19">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org3abba19">
+<div id="outline-container-org26e6703" class="outline-2">
+<h2 id="org26e6703">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org26e6703">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -211,9 +215,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org3f1e187" class="outline-2">
-<h2 id="org3f1e187">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org3f1e187">
+<div id="outline-container-orgafd4ca9" class="outline-2">
+<h2 id="orgafd4ca9">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-orgafd4ca9">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -316,9 +320,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-org6ed2e93" class="outline-2">
-<h2 id="org6ed2e93">Cask</h2>
-<div class="outline-text-2" id="text-org6ed2e93">
+<div id="outline-container-orgdcef8d6" class="outline-2">
+<h2 id="orgdcef8d6">Cask</h2>
+<div class="outline-text-2" id="text-orgdcef8d6">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -352,9 +356,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org930eee1" class="outline-2">
-<h2 id="org930eee1">외부 링크</h2>
-<div class="outline-text-2" id="text-org930eee1">
+<div id="outline-container-org641b682" class="outline-2">
+<h2 id="org641b682">외부 링크</h2>
+<div class="outline-text-2" id="text-org641b682">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -367,6 +371,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -414,6 +421,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -432,11 +442,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
