--- a/note/javascript.html
+++ b/note/javascript.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -60,27 +64,28 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 4월 24일 수정</div>
+<div class="title-date">2020년 4월 28일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd3b1757">노트</a>
+<li><a href="#orgdd32660">노트</a>
 <ul>
-<li><a href="#org93445c3">모듈(Module)</a></li>
-<li><a href="#org596f494">스프레드(Spreads) 연산자</a></li>
-<li><a href="#org9bca8ee">튜플 비슷한 문법</a></li>
+<li><a href="#org3b78730">모듈(Module)</a></li>
+<li><a href="#org49f6e6d">스프레드(Spreads) 연산자</a></li>
+<li><a href="#orgc06c625">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org91500ac">실전(?) 메모</a>
+<li><a href="#org036c8ad">실전(?) 메모</a>
 <ul>
-<li><a href="#orgc1d5df7">요소 얻기</a></li>
-<li><a href="#org75cf0ba">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org9a1da22">콘텐츠 높이 구하기</a></li>
-<li><a href="#orgdd61adf">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org2be471b">요소 얻기</a></li>
+<li><a href="#orgc02ee92">특정 블록에 HTML 넣기</a></li>
+<li><a href="#org1a3a8bb">콘텐츠 높이 구하기</a></li>
+<li><a href="#orgf9e7dc3">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org5c1ebed">forEach</a></li>
 </ul>
 </li>
-<li><a href="#org219f48e">외부 링크</a></li>
+<li><a href="#org1156caa">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,13 +103,13 @@
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgd3b1757" class="outline-2">
-<h2 id="orgd3b1757">노트</h2>
-<div class="outline-text-2" id="text-orgd3b1757">
+<div id="outline-container-orgdd32660" class="outline-2">
+<h2 id="orgdd32660">노트</h2>
+<div class="outline-text-2" id="text-orgdd32660">
 </div>
-<div id="outline-container-org93445c3" class="outline-3">
-<h3 id="org93445c3">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org93445c3">
+<div id="outline-container-org3b78730" class="outline-3">
+<h3 id="org3b78730">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org3b78730">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -156,9 +161,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org596f494" class="outline-3">
-<h3 id="org596f494">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org596f494">
+<div id="outline-container-org49f6e6d" class="outline-3">
+<h3 id="org49f6e6d">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org49f6e6d">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -221,9 +226,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org9bca8ee" class="outline-3">
-<h3 id="org9bca8ee">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-org9bca8ee">
+<div id="outline-container-orgc06c625" class="outline-3">
+<h3 id="orgc06c625">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-orgc06c625">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -235,13 +240,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org91500ac" class="outline-2">
-<h2 id="org91500ac">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org91500ac">
+<div id="outline-container-org036c8ad" class="outline-2">
+<h2 id="org036c8ad">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org036c8ad">
 </div>
-<div id="outline-container-orgc1d5df7" class="outline-3">
-<h3 id="orgc1d5df7">요소 얻기</h3>
-<div class="outline-text-3" id="text-orgc1d5df7">
+<div id="outline-container-org2be471b" class="outline-3">
+<h3 id="org2be471b">요소 얻기</h3>
+<div class="outline-text-3" id="text-org2be471b">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -253,9 +258,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org75cf0ba" class="outline-3">
-<h3 id="org75cf0ba">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org75cf0ba">
+<div id="outline-container-orgc02ee92" class="outline-3">
+<h3 id="orgc02ee92">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-orgc02ee92">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -265,9 +270,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org9a1da22" class="outline-3">
-<h3 id="org9a1da22">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org9a1da22">
+<div id="outline-container-org1a3a8bb" class="outline-3">
+<h3 id="org1a3a8bb">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-org1a3a8bb">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -287,9 +292,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgdd61adf" class="outline-3">
-<h3 id="orgdd61adf">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orgdd61adf">
+<div id="outline-container-orgf9e7dc3" class="outline-3">
+<h3 id="orgf9e7dc3">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-orgf9e7dc3">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -315,10 +320,55 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </p>
 </div>
 </div>
+<div id="outline-container-org5c1ebed" class="outline-3">
+<h3 id="org5c1ebed">forEach</h3>
+<div class="outline-text-3" id="text-org5c1ebed">
+<div class="org-src-container">
+<pre class="src src-javascript">&gt; [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>, <span style="color: #da8548; font-weight: bold;">3</span>, <span style="color: #da8548; font-weight: bold;">4</span>, <span style="color: #da8548; font-weight: bold;">5</span>].forEach((e) =&gt; console.log(e))
+<span style="color: #da8548; font-weight: bold;">1</span>
+<span style="color: #da8548; font-weight: bold;">2</span>
+<span style="color: #da8548; font-weight: bold;">3</span>
+<span style="color: #da8548; font-weight: bold;">4</span>
+<span style="color: #da8548; font-weight: bold;">5</span>
+</pre>
 </div>
-<div id="outline-container-org219f48e" class="outline-2">
-<h2 id="org219f48e">외부 링크</h2>
-<div class="outline-text-2" id="text-org219f48e">
+<p>
+위는 화살표 함수를 써서 간단하게 <a href="implementation.html">구현</a>한 것이지만 조금 더 전통적인(?) 방식으로 <a href="implementation.html">구현</a>하면 아래와 같다.
+</p>
+<div class="org-src-container">
+<pre class="src src-javascript">&gt; [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>, <span style="color: #da8548; font-weight: bold;">3</span>, <span style="color: #da8548; font-weight: bold;">4</span>, <span style="color: #da8548; font-weight: bold;">5</span>].forEach(<span style="color: #51afef;">function</span>(<span style="color: #dcaeea;">e</span>) { console.log(e); });
+<span style="color: #da8548; font-weight: bold;">1</span>
+<span style="color: #da8548; font-weight: bold;">2</span>
+<span style="color: #da8548; font-weight: bold;">3</span>
+<span style="color: #da8548; font-weight: bold;">4</span>
+<span style="color: #da8548; font-weight: bold;">5</span>
+</pre>
+</div>
+<p>
+일부러 전통적이라는 의미에서 세미콜론까지 붙여봤다. 근데 ES6를 지원하는 브라우저라면 굳이 쓸 필요는 없다. 개인적으로는 안 쓰는 것을 선호한다.
+</p>
+
+<p>
+간혹 getElements류 함수의 결과로 forEach를 쓰려하면 에러가 나는 경우가 있는데 당연히 타입이 Array가 아니라서 오류가 발생한다.
+이럴 때는 대충 아래처럼 돌려서 쓸 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-javascript"><span style="color: #51afef;">var</span> <span style="color: #dcaeea;">elements</span> = document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>);
+<span style="color: #5B6268;">// </span><span style="color: #5B6268;">pre ES6</span>
+Array.<span style="color: #a9a1e1;">prototype</span>.forEach.call(elements, <span style="color: #51afef;">function</span>(<span style="color: #dcaeea;">e</span>) { ... });
+<span style="color: #5B6268;">// </span><span style="color: #5B6268;">after ES6</span>
+Array.from(elements).forEach((e) =&gt; { ... })
+</pre>
+</div>
+<p>
+개인적으로 ES6 코드는 일부러 세미콜론을 안 붙이고 있으니 구분은 가능할 것 같다.
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-org1156caa" class="outline-2">
+<h2 id="org1156caa">외부 링크</h2>
+<div class="outline-text-2" id="text-org1156caa">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
@@ -332,6 +382,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -341,6 +394,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -359,11 +415,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
