--- a/note/motion.html
+++ b/note/motion.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,15 +69,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org40bf6b1">단축키</a></li>
-<li><a href="#org0cef87a">팁</a>
+<li><a href="#orga13f1ff">단축키</a></li>
+<li><a href="#org8066cc4">팁</a>
 <ul>
-<li><a href="#org2087acf">효과 적용 시간 보장하기</a></li>
+<li><a href="#orgde6b0fd">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#orgddc8a06">기타</a>
+<li><a href="#org491398e">기타</a>
 <ul>
-<li><a href="#orgc7d7902">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orge3cf6a4">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -89,9 +93,9 @@
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org40bf6b1" class="outline-2">
-<h2 id="org40bf6b1">단축키</h2>
-<div class="outline-text-2" id="text-org40bf6b1">
+<div id="outline-container-orga13f1ff" class="outline-2">
+<h2 id="orga13f1ff">단축키</h2>
+<div class="outline-text-2" id="text-orga13f1ff">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -99,13 +103,13 @@
 </dl>
 </div>
 </div>
-<div id="outline-container-org0cef87a" class="outline-2">
-<h2 id="org0cef87a">팁</h2>
-<div class="outline-text-2" id="text-org0cef87a">
+<div id="outline-container-org8066cc4" class="outline-2">
+<h2 id="org8066cc4">팁</h2>
+<div class="outline-text-2" id="text-org8066cc4">
 </div>
-<div id="outline-container-org2087acf" class="outline-3">
-<h3 id="org2087acf">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org2087acf">
+<div id="outline-container-orgde6b0fd" class="outline-3">
+<h3 id="orgde6b0fd">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-orgde6b0fd">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -123,13 +127,13 @@
 </div>
 </div>
 </div>
-<div id="outline-container-orgddc8a06" class="outline-2">
-<h2 id="orgddc8a06">기타</h2>
-<div class="outline-text-2" id="text-orgddc8a06">
+<div id="outline-container-org491398e" class="outline-2">
+<h2 id="org491398e">기타</h2>
+<div class="outline-text-2" id="text-org491398e">
 </div>
-<div id="outline-container-orgc7d7902" class="outline-3">
-<h3 id="orgc7d7902">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orgc7d7902">
+<div id="outline-container-orge3cf6a4" class="outline-3">
+<h3 id="orge3cf6a4">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orge3cf6a4">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -146,6 +150,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -165,6 +172,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -183,11 +193,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
