--- a/note/object.html
+++ b/note/object.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,16 +69,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org917f53a">사전적 의미</a></li>
-<li><a href="#orgd43042a">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#org471bf5f">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org68f8b0d">사전적 의미</a></li>
+<li><a href="#org6999517">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#org5ef922a">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org917f53a" class="outline-2">
-<h2 id="org917f53a">사전적 의미</h2>
-<div class="outline-text-2" id="text-org917f53a">
+<div id="outline-container-org68f8b0d" class="outline-2">
+<h2 id="org68f8b0d">사전적 의미</h2>
+<div class="outline-text-2" id="text-org68f8b0d">
 <blockquote>
 <p>
 물건, 물체
@@ -85,9 +89,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgd43042a" class="outline-2">
-<h2 id="orgd43042a">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-orgd43042a">
+<div id="outline-container-org6999517" class="outline-2">
+<h2 id="org6999517">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org6999517">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -98,9 +102,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org471bf5f" class="outline-2">
-<h2 id="org471bf5f">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-org471bf5f">
+<div id="outline-container-org5ef922a" class="outline-2">
+<h2 id="org5ef922a">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-org5ef922a">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
@@ -115,6 +119,9 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -134,6 +141,9 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -152,11 +162,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
