--- a/note/tmux.html
+++ b/note/tmux.html
@@ -28,6 +28,7 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -50,6 +51,9 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -65,20 +69,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7588c6b">사용법</a></li>
-<li><a href="#orgab81c41">설정 방법</a>
+<li><a href="#orgdbec731">사용법</a></li>
+<li><a href="#org414bddb">설정 방법</a>
 <ul>
-<li><a href="#orgca92a1a">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#orga3b54f6">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#org2f84f19">단축키</a></li>
-<li><a href="#orgeb16790">기타 팁</a>
+<li><a href="#orgc6359c3">단축키</a></li>
+<li><a href="#org3b600fa">기타 팁</a>
 <ul>
-<li><a href="#org54f8aed">선택 영역 복사하기</a></li>
-<li><a href="#orgfb692f2">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org43fdf1a">선택 영역 복사하기</a></li>
+<li><a href="#org6dd1c34">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org577ec51">관련된 글들</a></li>
+<li><a href="#orgffda585">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +96,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-org7588c6b" class="outline-2">
-<h2 id="org7588c6b">사용법</h2>
-<div class="outline-text-2" id="text-org7588c6b">
+<div id="outline-container-orgdbec731" class="outline-2">
+<h2 id="orgdbec731">사용법</h2>
+<div class="outline-text-2" id="text-orgdbec731">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -120,16 +124,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgab81c41" class="outline-2">
-<h2 id="orgab81c41">설정 방법</h2>
-<div class="outline-text-2" id="text-orgab81c41">
+<div id="outline-container-org414bddb" class="outline-2">
+<h2 id="org414bddb">설정 방법</h2>
+<div class="outline-text-2" id="text-org414bddb">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-orgca92a1a" class="outline-3">
-<h3 id="orgca92a1a">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-orgca92a1a">
+<div id="outline-container-orga3b54f6" class="outline-3">
+<h3 id="orga3b54f6">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-orga3b54f6">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -159,9 +163,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-org2f84f19" class="outline-2">
-<h2 id="org2f84f19">단축키</h2>
-<div class="outline-text-2" id="text-org2f84f19">
+<div id="outline-container-orgc6359c3" class="outline-2">
+<h2 id="orgc6359c3">단축키</h2>
+<div class="outline-text-2" id="text-orgc6359c3">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -184,13 +188,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgeb16790" class="outline-2">
-<h2 id="orgeb16790">기타 팁</h2>
-<div class="outline-text-2" id="text-orgeb16790">
+<div id="outline-container-org3b600fa" class="outline-2">
+<h2 id="org3b600fa">기타 팁</h2>
+<div class="outline-text-2" id="text-org3b600fa">
 </div>
-<div id="outline-container-org54f8aed" class="outline-3">
-<h3 id="org54f8aed">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org54f8aed">
+<div id="outline-container-org43fdf1a" class="outline-3">
+<h3 id="org43fdf1a">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org43fdf1a">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -204,9 +208,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orgfb692f2" class="outline-3">
-<h3 id="orgfb692f2">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orgfb692f2">
+<div id="outline-container-org6dd1c34" class="outline-3">
+<h3 id="org6dd1c34">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-org6dd1c34">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -234,9 +238,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org577ec51" class="outline-2">
-<h2 id="org577ec51">관련된 글들</h2>
-<div class="outline-text-2" id="text-org577ec51">
+<div id="outline-container-orgffda585" class="outline-2">
+<h2 id="orgffda585">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgffda585">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -251,6 +255,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -270,6 +277,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 </div>
 <div class="content-container">
@@ -288,11 +298,5 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  var elements = document.getElementsByClassName('adsbygoogle');
-  Array.prototype.forEach.call(elements, function(e) {
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  })</script>
 </body>
 </html>
